packages/next-swc/crates/core/tests/errors/server-actions/2/output.js
/* __next_internal_action_entry_do_not_use__ bar */ 'use strict';
export function bar() {}
import ensureServerEntryExports from "private-next-rsc-action-proxy";
ensureServerEntryExports([
    bar
]);
bar.$$typeof = Symbol.for("react.server.reference");
bar.$$id = "ac840dcaf5e8197cb02b7f3a43c119b7a770b272";
bar.$$bound = [];
bar.$$with_bound = false;
